--- a/src/containers/grid/grid.css
+++ b/src/containers/grid/grid.css
@@ -1,20 +1,44 @@
-.grid__list {
+.grid__container {
   padding: 3em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 40px;
 }
-.grid__list .card {
+.grid__container .card {
   background-color: white;
   border-radius: 10px;
   padding: 1em;
   box-shadow: 0px 10px 5px #b2bec3;
   text-align: center;
-  font-family: "Poppins";
 }
 
 .card .title {
   font-size: 18px;
   font-weight: bold;
+  font-family: "Poppins";
+}
+
+.card .text {
+  margin-bottom: 0.5em;
+  font-size: 2px;
 }
 
 .card img {
   max-width: 100%;
+}
+
+.view__btn {
+  background-color: #ffa502;
+  border: none;
+  padding: 1em;
+  border-radius: 5px;
+  font-weight: bold;
+  width: 100%;
+  margin: 0.5em;
+}
+
+.view__btn:hover {
+  box-shadow: 0px 5px 5px #b2bec3;
+  color: #363635;
 }
