--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,10 +2,11 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 li {
-  display: inline;
   padding: 30px;
+  display: inline-block;
 }
 
 .nav__menu {
@@ -14,8 +15,7 @@ li {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  display: inline;
-  margin: -15em;
+  margin: -4em;
   margin-left: 2em;
   font-family: "Poppins";
 }
