--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -10,12 +10,12 @@ li {
 }
 
 .nav__menu {
-  float: none;
+  /* float: none;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   margin: -12em;
-  margin-left: 2em;
+  margin-left: 2em; */
   font-family: "Poppins";
 }
