--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,14 +1,20 @@
-.column {
+.col1,
+.col2,
+.col3 {
   float: left;
   width: 33.33%;
+  /* margin: 0 10px; */
 }
 
+/* TODO - fix padding issue between col when minimizing screen size */
+
 /* Clear floats after the columns */
-.row:after {
+.row__main:after {
   content: "";
   display: table;
   clear: both;
 }
-.footer__background {
+.footer__main {
   /* background-color: #9c9d9d; */
+  padding: 15px;
 }
